# kestra-playground

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  Taskfile.yml  flake.nix  pyproject.toml
.github/workflows/: deploy.yml
.ign/: ign-files.json  ign-var.json  ign.json
batches/resource_probe/: run.sh
design-docs/references/: README.md
design-docs/specs/: architecture.md  command.md  design-kestra-enterprise-worker-group-mechanism.md  design-kestra-gcp-runtime-decision.md  design-oss-worker-routing-sequence.md  notes.md
impl-plans/: README.md
impl-plans/active/: kestra-deployment-playground.md
impl-plans/templates/: plan-template.md
k8s/base/: configmap.yaml  controller-grpc-service.yaml  executor.yaml  hpa.yaml  indexer.yaml  kestra-podcreate-rbac.yaml  kustomization.yaml  namespace.yaml  otel-collector.yaml  scheduler.yaml  secret.yaml  service-account.yaml  service.yaml  webserver.yaml  worker.yaml
k8s/helm/: kestra-controller-only-values.yaml  kestra-min-cost-values.yaml  kestra-values.yaml
scripts/: apply-gke-dev.sh  audit-federated-topology.sh  deploy-federated-live.sh  deploy-live-environments.sh  deploy-routed-live.sh  register-flows.sh  render-federated-child-flows.sh  render-live-config.sh  run-flow.sh  verify-live-environments.sh  verify-live-federated.sh  verify-live-gke-node-routing.sh  verify-live-k8s-pod-resources.sh  verify-live-operation-demo-gke-pod-resources.sh  verify-live-operation-demo-routed.sh  verify-live-routed.sh  verify-local-federated.sh  verify-local-operation-demo.sh
tests/: test_package.py
(+83 files in other folders)
