[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kestra-playground"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []


[project.urls]
Homepage = "https://github.com/user/repo"
Repository = "https://github.com/user/repo"

[project.scripts]
"kestra-playground" = "kestra_playground.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "pyyaml>=6.0.2",
  "ruff>=0.11.0",
  "ty>=0.0.1a32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kestra_playground"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
